# SAGDIB

./: README.md  bot.py  configuration.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  pylintrc  pyproject.toml  sagdib.html  search.html  searchindex.js  test_placeholder.html  testing.html
.github/workflows/: codeql.yml  sonarcloud.yml  sphinx.yml  test.yml
_modules/: index.html
_modules/tests/: test_placeholder.html
_sources/: index.rst.txt  testing.rst.txt
docs/: conf.py  configuration.rst  sagdib.rst  testing.rst
doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree  sagdib.doctree  test_placeholder.doctree  testing.doctree
html/: .buildinfo  installation.html  objects.inv  search.html
html/_sources/: test_placeholder.rst.txt
sagdib/: __init__.py
testing/: test_placeholder.html
tests/: test_placeholder.py
