[tool.poetry]
name = "sagdib"
version = "0.0.0"
description = "Python discord bot for Samegaki needs"
authors = ["Karel Bašta <karel@bastakka.eu>"]
license = "GPLv3"
readme = "README.md"
documentation = "https://github.com/samegaki-eu/SAGDIB"
keywords = ["Python", "Discord", "Poetry", "Pycord"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
pip = "^24.0"
taskipy = "^1.12.2"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
py-cord = {extras = ["voice"], version = "^2.5.0"}

[tool.poetry.dev-dependencies]
pylint = "^3.2.5"
yapf = "^0.40.2"
toml = "^0.10.2"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
indent_width = 2
spaces_before_comment = 2
split_before_logical_operator = true

[tool.taskipy.settings]
runner = "dotenv run"

[tool.taskipy.tasks]
test = { cmd = "python -m unittest tests/test_*.py", help = "Runs all unit tests"}
lint = { cmd = "pylint sagdib tests", help = "Lints code using pylint" }
check_formatting = { cmd = "yapf --diff -p -r -vv bot.py sagdib tests", help = "Checks if code is linted" }
format = { cmd = "yapf -i -p -r bot.py sagdib tests", help = "Formats code using yapf" }
generate_docs = { cmd = "make -C docs html", help = "Generates documentation" }
run = {cmd = "python bot.py", help = "Runs the bot"}
